feat: [#3] update serializers and API endpoints to reflect model structure
Updated serializers and API endpoints to reflect changes to models in recent PR.
A single API endpoint for 'AfvalProfiel' is used to aggregate and return
all relevant data for a klant via their BSN (including all ledigingen,
as well as all of all their containrers and BAG objecten with aggregated weights).

References: #2 and #4
