# src/openafval/api/urls.py
@@ -1,17 +1,16 @@
-from django.urls import include, path
+from django.urls import include, path, re_path
 from django.views.generic import RedirectView
 
 from drf_spectacular.views import SpectacularJSONAPIView, SpectacularRedocView
 from rest_framework import routers
 
-from openafval.afval.api.viewsets import BagBsnViewSet
+from openafval.afval.api.views import AfvalProfielAPIView
 
 app_name = "api"
 
 router = routers.DefaultRouter(trailing_slash=False, use_regex_path=False)
 router.include_format_suffixes = False
 
-router.register("bag", BagBsnViewSet, basename="bag")
 
 urlpatterns = [
     path("docs/", RedirectView.as_view(pattern_name="api:api-docs")),
@@ -28,6 +27,11 @@ urlpatterns = [
                     "docs/",
                     SpectacularRedocView.as_view(url_name="api:api-schema-json"),
                     name="api-docs",
+                ),
+                re_path(
+                    "afval-profiel/(?P<bsn>[0-9]{8,9})/$",
+                    AfvalProfielAPIView.as_view(),
+                    name="afval-profiel",
                 ),
                 path("", include(router.urls)),
             ]
